# nanobot-channel-anon

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
nanobot_channel_anon/: __init__.py  buffer.py  channel.py  config.py  context_store.py  domain.py  inbound.py  inbound_forward.py  inbound_media.py  kernel.py  onebot.py  outbound.py  policy.py  presenter.py  router.py  serializer.py  utils.py
nanobot_channel_anon/adapters/: __init__.py  onebot_mapper.py  onebot_media.py  onebot_state.py  onebot_transport.py
nanobot_channel_anon/mcp/: README.md  __init__.py  models.py  napcat_client.py  server.py  settings.py
nanobot_channel_anon/mcp/tools/: create_flash_task.py  delete_friend.py  delete_msg.py  get_ai_characters.py  get_ai_record.py  get_friend_list.py  get_friend_msg_history.py  get_group_detail_info.py  get_group_info.py  get_group_list.py  get_group_member_info.py  get_group_member_list.py  get_group_msg_history.py  get_qun_album_list.py  send_flash_msg.py  send_group_ai_record.py  send_like.py  send_poke.py  set_friend_add_request.py  set_group_add_request.py  set_group_ban.py  set_group_card.py  set_group_kick.py  set_group_leave.py  set_group_whole_ban.py  set_msg_emoji_like.py  set_qq_avatar.py  upload_image_to_qun_album.py
tests/: test_channel_contract.py  test_channel_shell.py  test_channel_ws.py  test_config.py  test_context_store.py  test_inbound.py  test_inbound_concurrency.py  test_inbound_media.py  test_kernel_inbound.py  test_kernel_outbound.py  test_mcp_napcat_http.py  test_mcp_validation.py  test_onebot_mapper.py  test_onebot_media.py  test_onebot_state.py  test_onebot_transport.py  test_outbound.py  test_policy.py  test_presenter.py  test_router.py  test_serializer.py
