[project]
name = "nanobot-channel-anon"
version = "0.1.0"
description = "适用于 nanobot 的 Tencent QQ 聊天插件（napcat）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nanobot-ai>=0.1.5",
    "aiohttp",
    "mcp",
]

[dependency-groups]
dev = ["ruff", "pytest", "pyright"]

[project.entry-points."nanobot.channels"]
anon = "nanobot_channel_anon:AnonChannel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanobot_channel_anon"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # import sorting
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "C4",  # comprehensions
    "ARG", # unused arguments
    "RUF", # ruff-specific rules
    "D",   # docstring
]
ignore = [
    "D203", # conflicts with one-blank-line-before-class style
    "D212", # allow summary on first line behavior to vary
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = ["nanobot_channel_anon", "tests"]
