[project]
name = "nanobot-channel-anon"
version = "0.1.3"
description = "nanobot 的 QQ 频道插件，通过 NapCat / OneBot v11 接入聊天能力"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "ByteColtX" }]
keywords = ["nanobot", "qq", "onebot", "napcat", "mcp"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]
urls = { Repository = "https://github.com/ByteColtX/nanobot-channel-anon", Issues = "https://github.com/ByteColtX/nanobot-channel-anon/issues" }
dependencies = [
    "aiohttp",
    "loguru",
    "mcp",
    "nanobot-ai>=0.1.5",
    "pydantic",
    "pydantic-settings",
]

[dependency-groups]
dev = ["ruff", "pytest", "pyright"]

[project.entry-points."nanobot.channels"]
anon = "nanobot_channel_anon:AnonChannel"

[project.scripts]
nanobot-anon-mcp = "nanobot_channel_anon.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanobot_channel_anon"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # import sorting
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "C4",  # comprehensions
    "ARG", # unused arguments
    "RUF", # ruff-specific rules
    "D",   # docstring
]
ignore = [
    "D203", # conflicts with one-blank-line-before-class style
    "D212", # allow summary on first line behavior to vary
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = ["nanobot_channel_anon", "tests"]
